# sip-extractor

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  build_library.ipynb  pyproject.toml  requirements.txt  sip_preprocessing.ipynb
data/refs/: README.md
data/sips/: README.md
notebooks/: 01_preprocess.ipynb  02_build_library.ipynb  03_detect_symbols.ipynb
sip_extractor/: __init__.py  classify.py  ocr.py  preprocessing.py  schema.py  symbols.py
sip_extractor/utils/: geometry.py  io.py
